CHANGELOG fuer c't-Bot
======================
2008-03-18 Timo Sandmann [mail@timosandmann.de]: Code fuer automatische Adressvergabe vervollstaendigt, PC-Code fuer Bot-2-Sim aufgeraeumt

2008-03-16 Benjamin Benz [bbe@heise.de]: Rohcode für die automatische Adressvergabe eingefügt

2008-03-16 Timo Sandmann [mail@timosandmann.de]: Bugfix fuer command.c

2008-03-15 Timo Sandmann [mail@timosandmann.de]: Ergaenzung zur Bot-Kommunikation: Bot-Code wertet Komm'-Adresse aus, Adresse per Kommandozeile einstellbar (-a), unnoetigen Komm'-Code auskommentiert

2008-08-15 Benjamin Benz [bbe@heise.de]: Ein wenig an den neuen Kommandos gefeilt, primaer Log-Ausgaben

2008-03-13 Timo Sandmann [mail@timosandmann.de]: Bugfix fuer bot_goto_dist() nach Abbruch von bot_goto_pos()

2008-03-10 Timo Sandmann [mail@timosandmann.de]: Reset-Funktion fuer Bots eingebaut: Taste RC5_CODE_CH_PC setzt einen Bot zurueck

2008-02-29 Timo Sandmann [mail@timosandmann.de]: Datenstruktur fuer Kommunikation auf Sender-IDs erweitert

2008-02-28 Frank Menzel [Menzelfr@gmx.net]: RC5_CODE_DOT auf Promo 8 auf AV-Taste sowie Bug im verhalten Drive_Stack korrigiert

2008-02-25 Timo Sandmann [mail@timosandmann.de]: MMC-Zugriff beschleunigt (RAM-Zugriff in die Warteschleife verschoben)

2008-02-19 Timo Sandmann [mail@timosandmann.de]: ct-Bot.c aufgeraeumt, Commandline-Zeug nach pc/cmd-tools_pc.c und Sensor-Test nach sensor.c ausgelagert

2008-01-24 Timo Sandmann [mail@timosandmann.de]: bot-local.h aufgeraeumt: Einheit fuer Entfernungen ist jetzt durchgaengig mm, nicht bot-spezifische Konstanten in die jeweiligen Verhalten verschoben, nie benutzte Konstanten entfernt

2008-01-14 Timo Sandmann [mail@timosandmann.de]: Lesen von MMC beschleunigt (10 %)

2008-01-14 Achim Pankalla [achim.pankalla@gmx.de]: Ticket #159: Fehler bei eeprom-emulation behoben. Position von include global.h geaendert.

2008-01-10 Timo Sandmann [mail@timosandmann.de]: bot_goto_pos und bot_turn optimiert
