@@ -26,6 +26,7 @@
 
 #include "ct-Bot.h"
 #include "command.h"
+#include "bot-2-bot.h"
 #include "uart.h"
 #include "bot-2-pc.h"
 #include "sensor.h"
@@ -60,37 +61,34 @@ void bot_2_pc_listen(void) {
 /*! 
  * Diese Funktion informiert den PC ueber alle Sensor und Aktuator-Werte
  */
-void bot_2_pc_inform(void){
-	int16 value1, value2;
+void bot_2_pc_inform(void) {
+	static int16_t value1 = 0;
+	command_write(CMD_AKT_MOT, SUB_CMD_NORM, &speed_l, &speed_r, 0);		
+	command_write(CMD_SENS_IR, SUB_CMD_NORM, &sensDistL, &sensDistR, 0);
+	command_write(CMD_SENS_ENC, SUB_CMD_NORM, (int16_t *)&sensEncL, (int16_t *)&sensEncR, 0);
+	command_write(CMD_SENS_BORDER, SUB_CMD_NORM, &sensBorderL, &sensBorderR, 0);
+	command_write(CMD_SENS_LINE, SUB_CMD_NORM, &sensLineL, &sensLineR, 0);
+	command_write(CMD_SENS_LDR, SUB_CMD_NORM , &sensLDRL, &sensLDRR, 0);
 	
-	command_write(CMD_AKT_MOT, SUB_CMD_NORM ,(int16*)&speed_l,(int16*)&speed_r,0);	
 	#ifdef LED_AVAILABLE
-		value1=(int16)led;
-		command_write(CMD_AKT_LED, SUB_CMD_NORM ,&value1,&value1,0);
+		value1 = led;
+		command_write(CMD_AKT_LED, SUB_CMD_NORM, &value1, NULL, 0);
 	#endif
-	
-	command_write(CMD_SENS_IR, SUB_CMD_NORM ,(int16*)&sensDistL,(int16*)&sensDistR,0);
-	command_write(CMD_SENS_ENC, SUB_CMD_NORM ,(int16*)&sensEncL,(int16*)&sensEncR,0);
-	command_write(CMD_SENS_BORDER, SUB_CMD_NORM ,(int16*)&sensBorderL,(int16*)&sensBorderR,0);
-	command_write(CMD_SENS_LINE, SUB_CMD_NORM ,(int16*)&sensLineL,(int16*)&sensLineR,0);
-
-	command_write(CMD_SENS_LDR, SUB_CMD_NORM ,(int16*)&sensLDRL,(int16*)&sensLDRR,0);
-	
-	value1= (int16) sensTrans; value2=0;
-	command_write(CMD_SENS_TRANS, SUB_CMD_NORM ,&value1,&value2,0);
-	
-	value1= (int16) sensDoor;
-	command_write(CMD_SENS_DOOR, SUB_CMD_NORM ,&value1,&value2,0);
+	value1 = sensTrans;
+	command_write(CMD_SENS_TRANS, SUB_CMD_NORM, &value1, NULL, 0);
+	value1 = sensDoor;
+	command_write(CMD_SENS_DOOR, SUB_CMD_NORM, &value1, NULL, 0);
+	value1 = sensError;
+	command_write(CMD_SENS_ERROR, SUB_CMD_NORM, &value1, NULL, 0);
 	
 	#ifdef MAUS_AVAILABLE
-		value1=(int16)sensMouseDX;
-		value2=(int16)sensMouseDY;
-		command_write(CMD_SENS_MOUSE, SUB_CMD_NORM ,&value1,&value2,0);
+		static int16_t value2;
+		value1 = sensMouseDX;
+		value2 = sensMouseDY;
+		command_write(CMD_SENS_MOUSE, SUB_CMD_NORM, &value1, &value2, 0);
 	#endif	
 	
-	value1=(int16)sensError;  value2=0;
-	command_write(CMD_SENS_ERROR, SUB_CMD_NORM ,&value1,&value2,0);
-//	command_write(CMD_SENS_RC5, SUB_CMD_NORM ,(int16*)&RC5_Code,&value2,0);
+	command_write(CMD_DONE, SUB_CMD_NORM, NULL, 0, 0);
 }
 
 /*! 
@@ -99,22 +97,7 @@ void bot_2_pc_inform(void){
 void bot_2_pc_init(void) {	
 	uart_init();
 	
-	uint8_t addr = get_bot_address();
-	if (addr > 127) {
-		/* gespeicherte Adresse ist eine vom Sim Vergebene,
-		 * schalte auf Adressevergabemodus um */
-		addr = CMD_BROADCAST;
-		set_bot_address(addr);
-	}
-	uint8 j;
-	for (j=0; j<5; j++) {
-		command_write(CMD_WELCOME, SUB_WELCOME_REAL, NULL, NULL, 0);
-	}
-	
-	if (addr == CMD_BROADCAST) {
-		// Fordere eine Adresse an
-		command_write(CMD_ID, SUB_ID_REQUEST, NULL, NULL, 0);	
-	}
+	command_init();
 }
 
 #endif	// BOT_2_PC_AVAILABLE
