@@ -507,6 +507,8 @@ int16 is_obstacle_ahead(int16 distance) {
 #endif	// SENSOR_DISPLAY_AVAILABLE
 
 #ifdef DISPLAY_ODOMETRIC_INFO
+	#include "command.h"
+	
 	/*!
 	 * @brief	Displayhandler fuer Odometrieanzeige
 	 */
@@ -521,6 +523,9 @@ int16 is_obstacle_ahead(int16 distance) {
 		#ifdef MEASURE_MOUSE_AVAILABLE
 			display_cursor(4,1);
 			display_printf("squal: %3d v_c: %3d",maus_get_squal(),(int16)v_mou_center);
+		#else
+			display_cursor(4,1);
+			display_printf("bot_addr=0x%x", get_bot_address());
 		#endif
 	}
 #endif	// DISPLAY_ODOMETRIC_INFO
